# matching_engine

./: PRACTICE.md  README.md  activity_diagrams.md  api_activity_by_endpoint.md  bug_crash.md  bug_dev.md  bug_map.md  bug_qa.md  bug_sec.md  bug_security.md  hackathon_todo_task.html  pyproject.toml  reqired.md  sequence_cancel_order.md  sequence_stop_order.md  test_case_stop_order.md  test_result.md
.claude/: settings.local.json
frontend/: __init__.py  server.py
frontend/static/: app.js  index.html  styles.css
matching_engine/: __init__.py  cli.py  models.py  order_book.py  service.py  web.py
tests/: test_adversarial.py  test_matching_engine.py  test_order_book.py  test_stop_orders.py
