[project]
name = "mock-matching-engine"
version = "0.1.0"
description = "Practice project for matching engine hackathon drills"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
